build: configurar plugin de aplicação e acesso nativo